# guard-agent

./: .gitignore  AGENTS.md  CLAUDE.md  ISSUES.md  README.md  pyproject.toml  recon.h5  setup.sh
agents/: __init__.py
agents/deploy/: __init__.py  agent_graph.py  config.py  llm.py  mcp_client.py  start_agent.py  webui.py
agents/veloc/: README.md  __init__.py  _sdk_loader.py  agent.py  agent_graph.py  config.py  filesync_tools.py  llm.py  metrics.py  start_agent.py  validation_tools.py  vector_db.py  webui.py
agents/veloc_legacy/: agent_graph.py  config.py  filesync_tools.py  metrics.py  start_agent.py  vector_db.py
docs/: app_checkpoint_config.md  application_classification_matrix.md  cold_replay_detector.md  data_locations.md  evaluation_methodology.tex  evaluation_methodology_draft.md  examinimd_manual_validation_guide.md  exampm_manual_validation_guide.md  fig_app_matrix.tex  fig_app_matrix_standalone.tex  llm_resilience_audit_methodology.md  llm_resilience_engineering_report.md  tab_baseline_results.tex
docs/figs/: _cells.py  _plot_approach_legend.py  _plot_compare_walltime_stacked.py  _plot_fast_tier_iter_metrics.py  _plot_fast_tier_llm_vs_reference.py  _plot_fast_tier_state_coverage.py  _plot_iter_vs_ratio.py  _plot_loc_vs_tokens.py  _plot_loc_vs_wall_and_tokens.py  _plot_modpct_vs_tokens.py  _plot_overhead_legend.py  _plot_per_group_summary.py  _plot_pergroup_legend.py  _plot_readpct_vs_tokens.py  _plot_tokens_per_iter.py
examples/: README.md  call_mcp_tool.py  list_tools.py  transform_request.py
examples/art_simple/: cmd  (+1 more)
guard_agent/: __init__.py  analyzer.py  cli.py  guide.py  mcp_server.py  planner.py  project_config.py  schemas.py  validator.py
orchestrator/: .env.example  requirements.txt
resilience_mcp/: README.md  __init__.py  __main__.py  server.py
scripts/: baseline_full_pipeline.sh  correctness_retry.sh  install_all_deps.sh  install_app_sources.sh  install_criu.sh  install_deps.sh  install_dmtcp_mana.sh  install_system_deps.sh  strip_vanilla_checkpoint_hints.py  validate_baseline_3tier.sh
shared/: README.md  schemas.py  veloc_llm_guide.md
slides/: gcasr-2026-streamguard.pptx
tests/: test_asymmetric_restart.py  test_bench_correctness.py  test_benchmark_pipeline.py  test_e2e_fixes.py  test_failure_injector.py  test_parallel_queue_control.py  test_parallel_queue_resume.py  test_parallel_queue_stall_retry.py  test_parallel_queue_watchdog.py  test_perturbation.py  test_perturbation_calibrator.py  test_prompt_truncation.py  test_propose_strategy.py  test_runner_disk_guard.py  test_runner_find_executable.py  test_runner_missing_veloc_cfg_message.py  test_wiring_consistency.py
tests/apps/checkpointed/deal.II/: CMakeLists.txt
tests/apps/vanillas/Chameleon/: CMakeLists.txt  app.yaml
tests/apps/vanillas/Chameleon/compute/: pzgemm.c
tests/apps/vanillas/CoMD/: CMakeLists.txt  app.yaml
tests/apps/vanillas/CoMD/src-mpi/: CoMD.c
tests/apps/vanillas/DPLASMA/: CMakeLists.txt  app.yaml
tests/apps/vanillas/DPLASMA/src/: ztrmm_LUN.jdf  ztrmm_RUT.jdf
tests/apps/vanillas/ExaML/: CMakeLists.txt  app.yaml
tests/apps/vanillas/NekRS/NekRS/src/core/udf/: CMakeLists.txt  ci.hpp  udfMake.hpp
tests/apps/vanillas/Nyx/: CMakeLists.txt  app.yaml  prompt.txt
tests/apps/vanillas/Nyx/Exec/HydroTests/: CMakeLists.txt  inputs.validation
tests/apps/vanillas/Nyx/Source/Driver/: Nyx.H  Nyx.cpp  comoving.cpp  nyx_main.cpp
tests/apps/vanillas/Nyx/Source/Forcing/: Forcing_init.cpp
tests/apps/vanillas/Nyx/Source/IO/: Nyx_output.cpp
tests/apps/vanillas/Nyx/Source/Initialization/: Nyx_initdata.cpp  Nyx_setup.cpp
tests/apps/vanillas/Nyx/Source/Particle/: NyxParticleContainer.H  NyxParticles.cpp
tests/apps/vanillas/Nyx/Source/TimeStep/: Nyx_advance.cpp
tests/apps/vanillas/RAxML-NG/: CMakeLists.txt  Makefile  app.yaml
tests/apps/vanillas/Uintah/: CMakeLists.txt  app.yaml
tests/apps/vanillas/miniFE/: CMakeLists.txt  app.yaml
tests/apps/vanillas/miniVite/: CMakeLists.txt  Makefile  app.yaml  dspl.hpp  main.cpp
tests/apps/vanillas/miniVite/libcheckpoint/: checkpoint.c  checkpoint.h
tests/ecp/ref-resilient/ExaMPM/: CMakeLists.txt  veloc.cfg
tests/ecp/ref-resilient/ExaMPM/examples/: CMakeLists.txt  dam_break.cpp  free_fall.cpp
tests/ecp/ref-resilient/ExaMPM/src/: CMakeLists.txt  ExaMPM_ProblemManager.hpp  ExaMPM_Solver.hpp
tests/ecp/ref-resilient/ExaMiniMD/: CMakeLists.txt  install_deps.sh  veloc.cfg
tests/ecp/ref-resilient/ExaMiniMD/src/: CMakeLists.txt  examinimd.cpp  examinimd.h  input.cpp  main.cpp  modules_force.h
tests/ecp/ref-resilient/ExaMiniMD/src/binning_types/: binning_kksort.cpp  binning_kksort.h
tests/ecp/ref-resilient/ExaMiniMD/src/force_types/: CMakeLists.txt  force_lj_idial_neigh_impl.h  force_lj_neigh_impl.h
tests/ecp/ref-resilient/ExaMiniMD/src/neighbor_types/: neighbor_2d.h  neighbor_csr.h
tests/ecp/ref-resilient/Quicksilver/: CMakeLists.txt  veloc.cfg
tests/ecp/ref-resilient/Quicksilver/src/: Makefile  main.cc
tests/ecp/vanillas/ExaMPM/: CMakeLists.txt  README.md  install_deps.sh  prompt.txt
tests/ecp/vanillas/Quicksilver/: CMakeLists.txt  prompt.txt
tests/ecp/vanillas/Quicksilver/Examples/ValidationMixed/: validationMixed.inp
tests/ecp/vanillas/Quicksilver/src/: Makefile
tests/examples/dmtcp/art_simple/: CMakeLists.txt  art_simple.cc  art_simple.h  debug_dmtcp_hang.sh  debug_dmtcp_hang2.sh  debug_dmtcp_hang3.sh  debug_dmtcp_hang4.sh  debug_mana_sigsegv.sh  debug_mana_sigsegv2.sh  debug_mana_sigsegv3.sh  debug_mana_sigsegv4.sh  debug_mana_sigsegv5.sh  debug_mana_sigsegv6.sh  debug_mana_sigsegv7.sh  debug_mana_sigsegv8.sh  diagnose_and_fix_mana.sh  main.cc  rebuild_dmtcp_gcc.sh  rebuild_mana_aurora.sh  rebuild_mana_openmpi.sh  test_local_dmtcp.sh  test_mana_aurora.sh  test_openmpi_mana.sh
tests/examples/ref_solutions/cursor_art_simple/: CMakeLists.txt  main.cc
validation/: __init__.py  comparison_art_simple.md  failure_injector.py  requirements.txt  run_art_simple_cursor_validation.sh  run_art_simple_pair_validation.sh  run_art_simple_validation.sh  run_resilience_validation.py  run_validation.py
(+25415 files in other folders)
