[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guard-agent"
version = "0.1.0"
description = "Automatic VeloC checkpointing advisor for resilient HPC applications"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
# Full agent mode (requires LLM client + existing agent code)
agent = [
    "openai>=1.50.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.0",
]
# Validation framework (requires scientific Python)
validation = [
    "numpy",
    "matplotlib",
    "scikit-image",
    "h5py",
    "psutil>=5.9.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
]

[project.scripts]
guard-agent = "guard_agent.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tests/apps", "tests/ecp", "tests/examples", "build"]

[tool.hatch.build.targets.wheel]
packages = ["guard_agent"]

[tool.hatch.build.targets.wheel.force-include]
"guard_agent/guides/veloc_guide.md" = "guard_agent/guides/veloc_guide.md"
